--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,62 @@
     <!-- Turf -->
     <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
 
+    <!-- Esri Leaflet -->
+    <script src="https://unpkg.com/esri-leaflet/dist/esri-leaflet.js"></script>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+
+    <!-- Awesome Markers -->
+    <link rel="stylesheet" href="plugins/awesome_markers/leaflet.awesome-markers.css">
+    <script src="plugins/awesome_markers/leaflet.awesome-markers.js"></script>
+
     <script>
         var propertyTitlesLayer;
         var resourceConsentsLayer;
         var geoServerURL = 'http://10.6.4.20:5000'
-        var map = L.map('map').setView([-41.2865, 174.7762], 10);
+        var map = L.map('map').setView([-41.2865, 174.7762], 20);
+
+        function createAttributePopup (feature, layer) {
+            var popupContent = "<table>";
+            for (var prop in feature.properties) {
+                if (feature.properties.hasOwnProperty(prop)) {
+                    popupContent += "<tr><th>" + prop + "</th><td>" + feature.properties[prop] + "</td></tr>";
+                }
+            }
+            popupContent += "</table>";
+            layer.bindPopup(popupContent);
+        }
+
+        var wellMarker = L.AwesomeMarkers.icon({
+            icon: 'star',
+            markerColor: 'blue'
+        });
+        console.log(wellMarker)
+        var wells_bores = L.esri.featureLayer({
+            url:"https://mapping.gw.govt.nz/arcgis/rest/services/GW/Resource_Consents_P/MapServer/1",
+            onEachFeature:createAttributePopup,
+            pointToLayer: function (geojson, latlng) {
+            return L.marker(latlng, {
+              icon: wellMarker
+            });
+          }
+        }
+        ).addTo(map);
+
+        var resourceConsentMarker = L.AwesomeMarkers.icon({icon: 'link', prefix: 'glyphicon', markerColor: 'grey', spin:true});
+        var resource_consents = L.esri.featureLayer({
+            url:"https://mapping.gw.govt.nz/arcgis/rest/services/GW/Resource_Consents_P/MapServer/0",
+            onEachFeature:createAttributePopup,
+            pointToLayer: function (geojson, latlng) {
+            return L.marker(latlng, {
+              icon: resourceConsentMarker
+            });
+          }
+        }
+        ).addTo(map);
 
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
