--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,9 @@
     <link  rel="stylesheet"  href="https://unpkg.com/leaflet-geosearch@3.0.0/dist/geosearch.css"/>
     <script src="https://unpkg.com/leaflet-geosearch@latest/dist/bundle.min.js"></script>
 
+    <!-- Turf -->
+    <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
+
     <!-- Main files -->
     <link rel="stylesheet" href="css/style.css">
 
