--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,10 @@
     <link  rel="stylesheet"  href="https://unpkg.com/leaflet-geosearch@3.0.0/dist/geosearch.css"/>
     <script src="https://unpkg.com/leaflet-geosearch@latest/dist/bundle.min.js"></script>
 
+    <!-- Beautify Markers -->
+    <link rel="stylesheet" href="plugins/beautify_markers/leaflet-beautify-marker-icon.css">
+    <script src="plugins/beautify_markers/leaflet-beautify-marker-icon.js"></script>
+
     <!-- Turf -->
     <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
 
