Added fullscreen funcitonality and removed popup pan functionality

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,10 @@
     <!-- Turf -->
     <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
 
+    <!-- Leaflet Fullscreen -->
+    <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
+    <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' rel='stylesheet' />
+
     <!-- Main files -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -41,6 +45,4 @@
 <body>
     <div id="map"></div>
     <script src="js/script.js"></script>
-
-
 </html>
