--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,10 @@
     <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' rel='stylesheet' />
 
+    <!-- Leaflet Logo Plugin -->
+    <script type="text/javascript" src="plugins/credits/leaflet-control-credits.js"></script>
+    <link rel="stylesheet" href="plugins/credits/leaflet-control-credits.css" />
+
     <!-- Main files -->
     <link rel="stylesheet" href="css/style.css">
 
