--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     <script src="https://kit.fontawesome.com/5f265d0ba6.js" crossorigin="anonymous"></script>
 
     <!-- Awesome Markers -->
-    <link rel="stylesheet" href="plugins/awesome_markers/leaflet.awesome-markers.css">
-    <script src="plugins/awesome_markers/leaflet.awesome-markers.js"></script>
+    <link rel="stylesheet" href="src/plugins/awesome_markers/leaflet.awesome-markers.css">
+    <script src="src/plugins/awesome_markers/leaflet.awesome-markers.js"></script>
 
     <!-- Geosearch Plugin -->
     <link  rel="stylesheet"  href="https://unpkg.com/leaflet-geosearch@3.0.0/dist/geosearch.css"/>
     <script src="https://unpkg.com/leaflet-geosearch@latest/dist/bundle.min.js"></script>
 
     <!-- Beautify Markers -->
-    <link rel="stylesheet" href="plugins/beautify_markers/leaflet-beautify-marker-icon.css">
-    <script src="plugins/beautify_markers/leaflet-beautify-marker-icon.js"></script>
+    <link rel="stylesheet" href="src/plugins/beautify_markers/leaflet-beautify-marker-icon.css">
+    <script src="src/plugins/beautify_markers/leaflet-beautify-marker-icon.js"></script>
 
     <!-- Turf -->
     <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
@@ -38,15 +38,15 @@
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' rel='stylesheet' />
 
     <!-- Leaflet Logo Plugin -->
-    <script type="text/javascript" src="plugins/credits/leaflet-control-credits.js"></script>
-    <link rel="stylesheet" href="plugins/credits/leaflet-control-credits.css" />
+    <script type="text/javascript" src="src/plugins/credits/leaflet-control-credits.js"></script>
+    <link rel="stylesheet" href="src/plugins/credits/leaflet-control-credits.css" />
 
     <!-- Main files -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="src/css/style.css">
 
     </body>
 </head>
 <body>
     <div id="map"></div>
-    <script src="js/script.js"></script>
+    <script src="src/js/script.js"></script>
 </html>
